# chocolate

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  test_comprehensive.py
app/: __init__.py  agent.py  api.py  config.py  llm.py  tools.py
app/api/: __init__.py  agent.py  health.py  ingestion.py
app/api/schemas/: __init__.py  base.py  enums.py
app/core/: agent_service.py  chunking.py  dict_helper.py  exceptions.py  quality_utils.py
app/core/chroma/: db_helper.py  example_usage.py
app/core/tokenization/: provider.py
app/data_ingestion/: validators.py
app/infra/: __init__.py
app/infra/cache/: __init__.py
app/infra/database/: __init__.py
app/infra/exceptions/: __init__.py
app/infra/logging/: __init__.py  config.py  example.py
app/infra/management/: __init__.py  audit.py  (+3 more)
app/llm_adapters/: __init__.py  base.py  factory.py  google.py  gpti4.py  openai.py
app/tools/: __init__.py  calculator.py  http.py  search.py
config/: app_config.json
docs/: README.md  api.md  architecture.md  claude_code_optimization.md  deduplication_strategies.md  extensions.md  faq.md  getting_started.md  implementation_guide.md  performance_optimization.md  stopWord.txt  tests.md
docs/rag/: README.md  application.md  ingestion.md  management.md  model_loader.md  office_documents_and_evolution_plan.md  overview.md  patterns.md  processing.md  retrieval.md  vector_store_practices.md  vectorization.md
scripts/: __init__.py  run_agent.py  run_api.py
tests/: cleanup_meilisearch.py  cleanup_neo4j.py  conftest.py  test_agent_capabilities.py  test_chromadb.py  test_cleanup_chromadb.py  test_cleanup_meilisearch.py  test_comprehensive.py  test_config_system.py  test_config_validation.py  test_retrieval.py  test_where_parsers.py
(+120 files in other folders)
